# Data-Warehouses-Project

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
docker/spark/: Dockerfile
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: Analytics.jsx  Assets.jsx  Assistant.jsx  CandleChart.jsx  Chart.jsx  Dashboard.jsx  DataSources.jsx  Ingest.jsx  TimeSeries.jsx  icons.jsx  ui.jsx
src/acme_dwh/: __init__.py  config.py
src/acme_dwh/analytics/: __init__.py  aggregation_job.py  regression_job.py  run_job.py
src/acme_dwh/api/: __init__.py  deps.py  main.py  schemas.py
src/acme_dwh/api/routers/: __init__.py  analytics.py  assets.py  assistant.py  data.py  data_sources.py  ingest.py
src/acme_dwh/api/spa/: index.html
src/acme_dwh/api/spa/assets/: index-Du1mxyzD.css  index-QTA8wUHX.js
src/acme_dwh/dal/: __init__.py  _compat.py  _mapping.py  analytics_repository.py  asset_repository.py  data_source_repository.py  models.py  repository.py  session.py  timeseries_repository.py
src/acme_dwh/db/: init_db.py  schema.cql
src/acme_dwh/ingestion/: __init__.py  load.py  run_ingestion.py  transform.py
src/acme_dwh/ingestion/providers/: __init__.py  base.py  bitfinex.py  nasdaq_data_link.py
src/acme_dwh/mcp/: __init__.py  agent.py  ollama_client.py  server.py
tests/: test_api.py  test_dal_integration.py  test_ingestion.py  test_ingestion_integration.py  test_init_db.py  test_mapping.py  test_mcp.py
